chore: code cleaning
(cherry picked from commit fa8ce012dacd99a15c11b6b1dcbb182d9299e6c6)